<resources>
    <string name="app_name">&appName;</string>
    <string name="google_map_api" translatable="false">AIzaSyCD30UnQoiw9FinROXL7GOGaLxbJ20LBKY</string>
    <string name="facebook_app_id" translatable="false">1818275234869999</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">2834e988c4f6557f31fe427f9e87a283</string>
    <string name="WEB_CLIENT_KEY">91672578681-krdjn3t7qh3c73skqp6d7ide8ba56dec.apps.googleusercontent.com</string>
    <string name="Outh_Client">"91672578681-flrvu48ulb7tlicov0m7l7e30vf73rtu.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_dummy">Dot2Dotz</string>
    <string name="action_payment">Payment</string>
    <string name="action_trips">Your deliveries</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>
    <string name="whats_your_phone_number">What\'s your phone number?</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="welcome_back">Welcome back, Sign In to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="apply">APPLY</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="referral_code">Referral Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no" translatable="false">9876543210</string>
    <string name="password_txt" translatable="false">******</string>
    <string name="recover_password">Enter your phone number for recovery</string>
    <string name="enter_the_coupon">Enter coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="fresh">W e l c o m e</string>
    <string name="search">S c h e d u l e</string>
    <string name="bookmark">D r i v e r s</string>
    <string name="fresh_description">Introducing &appName; Services to transport you where you need to go. A lot can happen, on our ride.</string>
    <string name="search_description">Take a ride whenever and wherever you want. Plan and Schedule for us to pick you up.</string>
    <string name="bookmark_description">We have the most friendly drivers who will go the extra mile for you.</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">choose pickup and drop off locations</string>
    <string name="extend_trip">Extend Delivery Trip?</string>
    <string name="selected_option">Economy</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="selected_payment_mode_payu">PayU Money</string>
    <string name="select_service">Select Service</string>
    <string name="change">Change</string>
    <string name="request_xuber">Request Pickup</string>
    <string name="sharing_text">Trip details</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="schedule">Schedule a &Service;</string>
    <string name="change_date">Change</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="past_trips">Past Trips</string>
    <string name="mins">mins</string>
    <string name="service_list_item" translatable="false">Jaguar</string>
    <string name="no_service">Service not available at this location.</string>
    <string name="no_route">There is no route, choose different destination</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="approximate">Estimated Fare</string>
    <string name="eta_time">ETA</string>
    <string name="sample_rate" translatable="false">$1234</string>
    <string name="include_all">Including all other charges</string>
    <string name="signin_or">(OR)</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirm">Confirm Pickup</string>
    <string name="close">Close</string>
    <string name="sample_address">110, StJoseph Chruch, Richards, road Newyork</string>
    <string name="done">Done</string>
    <string name="enter_coupon">Enter a coupon</string>
    <string name="looking_for_ride">Finding &Service;....</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the &service;?</string>
    <string name="no_providers_found">No Driver found at your location, Please try after sometime</string>
    <string name="no_drivers_found">No drivers available to take your delivery</string>
    <string name="driver_busy">Your &Service; was cancelled by the &Provider;.Please contact us for support</string>
    <string name="retry">Retry Now</string>
    <string name="try_later">Later</string>
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel delivery</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="pickup_drop">Please enter both pickup and drop locations</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_methods_past">Payment Method</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="sample_card_no" translatable="false">XXXX - XXXX - XXXX - XXXX</string>
    <string name="month_and_year" translatable="false">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">&Provider; has arrived at your location</string>
    <string name="picked_up">you are on &service;</string>
    <string name="dropped">&Service; has completed</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="otp">Otp</string>
    <string name="no_trips">You have no past trips</string>
    <string name="no_upcoming_trips">You have no upcoming trips</string>
    <string name="your_trips">Your deliveries</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price" translatable="false">0</string>
    <string name="sample_distance" translatable="false">1 KM</string>
    <string name="sample_time_travel" translatable="false">1 hr</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="discount_detection">Discount Applied</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="rate_provider">Rate your delivery with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Source location</string>
    <string name="destination_location">Where to?</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="change_pwd_dialog">Your password has updated successfully. Please login with your new password.</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="phone_validation">Please enter 10 digit Mobile Number</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="your_cards">Your Cards</string>
    <string name="enter_details_register">Enter your details to register</string>
    <string name="fb_cancel">Facebook login cancelled</string>
    <string name="fb_error">Facebook login failed</string>
    <string name="google_login">Google login failed</string>
    <string name="social_cancel">Social login cancelled</string>
    <string name="registration_failed">Registration cancelled</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="add_money_using">Add money using</string>
    <string name="add_money">Add Money</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="passbook">Passbook</string>
    <string name="settings">Settings</string>
    <string name="what_are_moving_for_u" translatable="false">What are we moving for you?</string>
    <string name="normal_user" translatable="false">Normal User</string>
    <string name="business_user" translatable="false">Business User</string>
    <string name="select_type" translatable="false">Select type</string>
    <string name="track_order" translatable="false">Track Order</string>
    <string name="order" translatable="false">Order</string>
    <string name="trip" translatable="false">Trip </string>
    <string name="delivery_address" translatable="false">Delivery Address</string>
    <string name="status" translatable="false">Status</string>
</resources>