<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">


            <com.dot2dotz.app.Utils.MyBoldTextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order"
                android:textColor="@color/colorAccent" />

            <ImageView
                android:id="@+id/status_img"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:src="@drawable/radio_btn_grey" />


        </RelativeLayout>

        <com.dot2dotz.app.Utils.MyBoldTextView
            android:id="@+id/delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/delivery_address"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.app.Utils.MyTextView
            android:id="@+id/destination_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp" />

        <com.dot2dotz.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/comments"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.app.Utils.MyTextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/comments" />

        <com.dot2dotz.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/otp"
            android:visibility="visible"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.app.Utils.MyTextView
            android:id="@+id/otpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:visibility="visible"
            android:text="@string/otp" />

        <com.dot2dotz.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/status"
            android:textColor="@color/colorAccent" />

        <com.dot2dotz.app.Utils.MyTextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/status" />

        <com.dot2dotz.app.Utils.MyButton
            android:id="@+id/track_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorAccent"
            android:text="@string/track_order"
            android:textColor="@color/text_color_white" />
    </LinearLayout>

</android.support.v7.widget.CardView>

