<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/content_height_width"
                android:layout_height="@dimen/content_height_width"
                android:autoMirrored="true"
                android:src="@drawable/back_drawable" />

            <com.dot2dotz.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/enter_details_register"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_14sdp" />

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dot2dotz.app.Utils.MyEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.dot2dotz.app.Utils.MyEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_weight="1">

                    <com.dot2dotz.app.Utils.MyEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|textPersonName"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.dot2dotz.app.Utils.MyTextView
                    android:id="@+id/countryNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="+91"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="normal" />

                <!--<com.rilixtech.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:ccp_defaultNameCode="US"/>-->

                <com.dot2dotz.app.Utils.MyEditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />

            </LinearLayout>

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/select_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/normal_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:checked="true"
                    android:text="@string/normal_user" />

                <RadioButton
                    android:id="@+id/business_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:text="@string/business_user" />

            </RadioGroup>

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dot2dotz.app.Utils.MyEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>

            <com.dot2dotz.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/referral_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_35sdp">

                <com.dot2dotz.app.Utils.MyEditText
                    android:id="@+id/referral_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:imeOptions="actionNext"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textAlignment="viewStart" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/ic_arrow_right" />

</android.support.design.widget.CoordinatorLayout>
