<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.dot2dotz.app.Activities.LocationAndGoodsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/content_height_width"
            android:layout_height="@dimen/content_height_width"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/back_drawable" />

        <com.dot2dotz.app.Utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:gravity="center_vertical"
            android:text="@string/what_are_moving_for_u"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/submit_btn"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_above="@+id/submit_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/ic_add"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_height="wrap_content" />

    <com.dot2dotz.app.Utils.MyButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

</RelativeLayout>
